fixed alignement in detail-text and started on readme

--- a/code/src/css/detail.css
+++ b/code/src/css/detail.css
@@ -1,16 +1,18 @@
 .details-container {
-  display: grid;
+  display: inline-block;
   background-size: cover;
   background-position: center;
   position: absolute;
+  overflow: hidden;
   height: 100%;
   width: 100%;
-  background: linear-gradient(180deg, rgba(0,0,0,0) 70%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(190deg, rgba(0,0,0,0) 60%, rgba(0,0,0,1) 100%);
   font-weight: 700;
   /* align-content: flex-end; */
   /* background-repeat: no-repeat ; */
 }
 .movie-background {
+  display:inline-block;
   position: fixed;
   z-index: -1;
   background-size: cover;
@@ -48,7 +50,6 @@ button {
   padding: 10px;
   border-style: none;
   height: 3em;
-  /* box-shadow: 5px 5px rgba(0, 0, 0, 0.2); */
   border-radius: 10px 40px;
   width: 120px;
   height: 80px;
@@ -59,14 +60,14 @@ button:hover {
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-.detailContent {
+.detail-content {
   display: grid;
   align-content: flex-end;
   margin: 2%;
   /* width: 100%; */
 }
 
-.detailGrid img {
+.detail-grid img {
   border: 5px solid #ffffff;
   /* margin: 30vh 1% 10vh 2%; */
   /* margin-left: 2%; */
@@ -74,14 +75,11 @@ button:hover {
   /* margin-top: 40%; */
 }
 
-.detailText {
+.detail-text {
   display: grid;
-  /* grid-auto-rows: 70px; */
-  /* grid-gap: 1em; */
-  /* background-color: rgb(218, 107, 107); */
   color: white;
   padding: 1em;
-  /* max-width: 200px; */
+ 
 }
 .detail-vote {
   padding-left: 2vw;
@@ -97,11 +95,11 @@ h1 {
 
 /* ------------------ MEDIA QUERIES ------------------ */
 @media screen and (min-width: 768px) {
-  .detailGrid img {
+  .detail-grid img {
     width: 30vw;
     /* margin: 30% 1% 2% 2%; */
   }
-  .detailContent {
+  .detail-content {
     grid-template-columns: 1fr 1fr 2fr;
   }
   /* .detailText {
@@ -119,7 +117,18 @@ h1 {
 }
 
 @media screen and (min-width: 1024px) {
-  .detailGrid img {
-    /* width: 30vw; */
+    .detail-content {
+    grid-template-columns: 1fr 1fr 2fr;
+    margin-top: 7vw;
   }
+
+
+  
+  .detail-grid img {
+    width: 25vw; 
+  }
+  .detail-text {
+    width: 25vw;
+    align-content: flex-end;
+    } 
 }
